Fixed issue where the title image partially overlapped the blurb section by removing a class specifically for the blurb row.

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,10 +76,6 @@ section {
 	background-color: white;
 }
 
-.blurb-row {
-	margin: 5% auto;	
-}
-
 .blurb-item {
 	padding: 4.5%;	
 }
